fix bug: cannot load bootstrap

--- a/Site/search/templates/search/index.html
+++ b/Site/search/templates/search/index.html
@@ -10,10 +10,10 @@
         <title>Distributed Search Engine Test</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'search/css/style.css' %}">
+        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         
     </head>
     <body style="background: rgb(255, 255, 255);">
@@ -24,7 +24,7 @@
             <div id="logo" title="Distributed Search"></div>
             <div id="fakebox">
                 <div class="input-group">
-                    <input type="text" class="form-contorl" placeholder="Search text or herf">
+                    <input type="text" class="form-control" placeholder="Search text or herf">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Search</button>
                     </span>
