refresh some information

--- a/Site/search/templates/search/index.html
+++ b/Site/search/templates/search/index.html
@@ -24,7 +24,7 @@
             <div id="logo" title="Distributed Search"></div>
             <div id="fakebox">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search text or herf">
+                    <input type="text" class="form-control" placeholder="Search text or href">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Search</button>
                     </span>
