--- a/Site/search/templates/search/result.html
+++ b/Site/search/templates/search/result.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -9,11 +10,54 @@
         <title>This page will list searching results</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'search/css/style.css' %}">
+        <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="special">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        Has no item!
+        <div class="container-fluid result-header">
+            <div class="row">
+                <div id="result-logo" class="col-md-1">
+                </div>
+                <div id="searchform" class="col-md-5">
+                    <form method="get">
+                        <div class="input-group">
+                            {{ form.q }}
+                            <span class="input-group-btn">
+                                <input type="submit" class="btn btn-default" value="Search">
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="container_fluid result-panel">
+            <div class="row">
+                <div class="result-list col-md-6 col-md-offset-1">
+                    <div class="result-item">
+                        <h3><a href="http://www.baidu.com">百度</a></h3>
+                        <span>http://www.baidu.com</span>
+                        <p class="result-item-summary">百度公司是一家主要经营搜索引擎服务的互联网公司，于2000年1月1日由李彦宏、徐勇两人创立于北京中关村。名称中的“百度”二字源自中国南宋词人辛弃疾的《青玉案·元夕》的一句词：“众里寻他千百度，蓦然回首，那人却在，灯火阑珊处”，企业标志则是一个“熊掌”，来自于“猎人以熊掌来寻迹”的意象。</p>
+                    </div>
+                    <div class="result-item">
+                        <h3><a href="http://www.baidu.com">百度</a></h3>
+                        <span>http://www.baidu.com</span>
+                        <p class="result-item-summary">百度公司是一家主要经营搜索引擎服务的互联网公司，于2000年1月1日由李彦宏、徐勇两人创立于北京中关村。名称中的“百度”二字源自中国南宋词人辛弃疾的《青玉案·元夕》的一句词：“众里寻他千百度，蓦然回首，那人却在，灯火阑珊处”，企业标志则是一个“熊掌”，来自于“猎人以熊掌来寻迹”的意象。</p>
+                    </div>
+                    {% for item in context %}
+                    <div class="result-item">
+                        <h2><a href="{{ item.url }}">{{ item.title }}</a></h2>
+                        <span>{{ item.url }}</span>
+                        <p class="result-item-summary">{{ item.summary }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        
     </body>
 </html>
