--- a/Site/search/templates/search/result.html
+++ b/Site/search/templates/search/result.html
@@ -41,9 +41,9 @@
                     {% if results %}
                         {% for item in results %}
                         <div class="result-item">
-                            <h3><a href="{{ item.url }}">{{ item.title }}</a></h3>
+                            <h3><a href="{{ item.url }}">{{ item.title | safe }}</a></h3>
                             <span>{{ item.url }}</span>
-                            <p class="result-item-summary">{{ item.summary }}</p>
+                            <p class="result-item-summary">{{ item.summary | safe }}</p>
                         </div>
                         {% endfor %}
                     {% else %}
